# hack-interview

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: audio.py  button.py  config.py  gpt_query.py  gui.py  handlers.py
